@@ -9,6 +9,7 @@ import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import com.google.common.base.Predicates;
 import com.simibubi.create.AllBlocks;
@@ -42,22 +43,30 @@ import com.simibubi.create.content.contraptions.components.press.MechanicalPress
 import com.simibubi.create.content.contraptions.components.saw.SawTileEntity;
 import com.simibubi.create.content.contraptions.fluids.recipe.PotionMixingRecipeManager;
 import com.simibubi.create.content.contraptions.processing.BasinRecipe;
+import com.simibubi.create.content.curiosities.tools.BlueprintScreen;
 import com.simibubi.create.foundation.config.AllConfigs;
 import com.simibubi.create.foundation.config.CRecipes;
 import com.simibubi.create.foundation.config.ConfigBase.ConfigBool;
 import com.simibubi.create.foundation.gui.container.AbstractSimiContainerScreen;
 import com.simibubi.create.foundation.utility.recipe.IRecipeTypeInfo;
 
+import me.shedaniel.rei.api.client.gui.drag.DraggableStack;
+import me.shedaniel.rei.api.client.gui.drag.DraggableStackVisitor;
+import me.shedaniel.rei.api.client.gui.drag.DraggedAcceptorResult;
+import me.shedaniel.rei.api.client.gui.drag.DraggingContext;
 import me.shedaniel.rei.api.client.plugins.REIClientPlugin;
 import me.shedaniel.rei.api.client.registry.category.CategoryRegistry;
 import me.shedaniel.rei.api.client.registry.display.DisplayRegistry;
 import me.shedaniel.rei.api.client.registry.screen.ExclusionZones;
+import me.shedaniel.rei.api.client.registry.screen.ScreenRegistry;
+import me.shedaniel.rei.api.client.registry.transfer.TransferHandlerRegistry;
 import me.shedaniel.rei.api.common.display.Display;
 import me.shedaniel.rei.api.common.entry.EntryStack;
 import me.shedaniel.rei.api.common.entry.type.VanillaEntryTypes;
 import me.shedaniel.rei.plugin.common.BuiltinPlugin;
 import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.core.Registry;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
@@ -69,13 +78,14 @@ import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.item.crafting.ShapedRecipe;
 import net.minecraft.world.level.ItemLike;
 
-@SuppressWarnings("all")
+import org.jetbrains.annotations.NotNull;
+
+@SuppressWarnings("unused")
 public class CreateREI implements REIClientPlugin {
 
 	private static final ResourceLocation ID = Create.asResource("rei_plugin");
 
-//	public IIngredientManager ingredientManager;
-	private final List<CreateRecipeCategory> allCategories = new ArrayList<>();
+	private final List<CreateRecipeCategory<?>> allCategories = new ArrayList<>();
 	private final CreateRecipeCategory<?>
 
 		milling = register("milling", MillingCategory::new).recipes(AllRecipeTypes.MILLING)
@@ -100,7 +110,8 @@ public class CreateREI implements REIClientPlugin {
 			.build(),
 
 	soul_smoking = register("fan_haunting", FanHauntingCategory::new).recipes(AllRecipeTypes.HAUNTING)
-			.catalystStack(ProcessingViaFanCategory.getFan("fan_haunting")).build(),
+			.catalystStack(ProcessingViaFanCategory.getFan("fan_haunting"))
+			.build(),
 
 	blasting = register("fan_blasting", FanBlastingCategory::new)
 			.recipesExcluding(() -> RecipeType.SMELTING, () -> RecipeType.BLASTING)
@@ -119,12 +130,12 @@ public class CreateREI implements REIClientPlugin {
 			.build(),
 
 	autoShapeless = register("automatic_shapeless", MixingCategory::autoShapeless)
-			.recipes(r -> ((Recipe<?>)r).getSerializer() == RecipeSerializer.SHAPELESS_RECIPE && ((Recipe<?>)r).getIngredients()
+			.recipes(r -> r.getSerializer() == RecipeSerializer.SHAPELESS_RECIPE && r.getIngredients()
 				.size() > 1 && !MechanicalPressTileEntity.canCompress((Recipe<?>) r),
-				r -> BasinRecipe.convertShapeless((Recipe<?>)r))
+					BasinRecipe::convertShapeless)
 			.catalyst(AllBlocks.MECHANICAL_MIXER::get)
 			.catalyst(AllBlocks.BASIN::get)
-			.enableWhen(c -> ((CRecipes)c).allowShapelessInMixer)
+			.enableWhen(c -> c.allowShapelessInMixer)
 			.build(),
 
 	brewing = register("automatic_brewing", MixingCategory::autoBrewing)
@@ -140,14 +151,14 @@ public class CreateREI implements REIClientPlugin {
 	blockCutting = register("block_cutting", () -> new BlockCuttingCategory(Items.STONE_BRICK_STAIRS))
 			.recipeList(() -> CondensedBlockCuttingRecipe.condenseRecipes(findRecipesByType(RecipeType.STONECUTTING)))
 			.catalyst(AllBlocks.MECHANICAL_SAW::get)
-			.enableWhen(c -> ((CRecipes)c).allowStonecuttingOnSaw)
+			.enableWhen(c -> c.allowStonecuttingOnSaw)
 			.build(),
 
 	woodCutting = register("wood_cutting", () -> new BlockCuttingCategory(Items.OAK_STAIRS))
 			.recipeList(() -> CondensedBlockCuttingRecipe
 				.condenseRecipes(findRecipesByType(SawTileEntity.woodcuttingRecipeType.get())))
 			.catalyst(AllBlocks.MECHANICAL_SAW::get)
-			.enableWhenBool(c -> ((CRecipes)c).allowWoodcuttingOnSaw.get() && FabricLoader.getInstance()
+			.enableWhenBool(c -> c.allowWoodcuttingOnSaw.get() && FabricLoader.getInstance()
 				.isModLoaded("druidcraft"))
 			.build(),
 
@@ -158,10 +169,10 @@ public class CreateREI implements REIClientPlugin {
 
 	autoSquare = register("automatic_packing", PackingCategory::autoSquare)
 			.recipes(re -> (re instanceof CraftingRecipe r) && MechanicalPressTileEntity.canCompress(r),
-					(r) -> BasinRecipe.convertShapeless((Recipe<?>) r))
+					BasinRecipe::convertShapeless)
 			.catalyst(AllBlocks.MECHANICAL_PRESS::get)
 			.catalyst(AllBlocks.BASIN::get)
-			.enableWhen(c -> ((CRecipes)c).allowShapedSquareInPress)
+			.enableWhen(c -> c.allowShapedSquareInPress)
 			.build(),
 
 	polishing = register("sandpaper_polishing", PolishingCategory::new).recipes(AllRecipeTypes.SANDPAPER_POLISHING)
@@ -183,33 +194,32 @@ public class CreateREI implements REIClientPlugin {
 			.build(),
 
 	spoutFilling = register("spout_filling", SpoutCategory::new).recipes(AllRecipeTypes.FILLING)
-			.recipeList(() -> SpoutCategory.getRecipes())
+			.recipeList(SpoutCategory::getRecipes)
 			.catalyst(AllBlocks.SPOUT::get)
 			.build(),
 
 	draining = register("draining", ItemDrainCategory::new)
-			.recipeList(() -> ItemDrainCategory.getRecipes())
+			.recipeList(ItemDrainCategory::getRecipes)
 			.recipes(AllRecipeTypes.EMPTYING)
 			.catalyst(AllBlocks.ITEM_DRAIN::get)
 			.build(),
 
 	autoShaped = register("automatic_shaped", MechanicalCraftingCategory::new)
-			.recipes(r -> ((Recipe<?>)r).getSerializer() == RecipeSerializer.SHAPELESS_RECIPE && ((Recipe<?>)r).getIngredients()
+			.recipes(r -> r.getSerializer() == RecipeSerializer.SHAPELESS_RECIPE && r.getIngredients()
 				.size() == 1)
 			.recipes(
-				r -> (((Recipe<?>)r).getType() == RecipeType.CRAFTING && ((Recipe<?>)r).getType() != AllRecipeTypes.MECHANICAL_CRAFTING.getType())
+				r -> (r.getType() == RecipeType.CRAFTING && r.getType() != AllRecipeTypes.MECHANICAL_CRAFTING.getType())
 					&& (r instanceof ShapedRecipe))
 			.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
-			.enableWhen(c -> ((CRecipes)c).allowRegularCraftingInCrafter)
+			.enableWhen(c -> c.allowRegularCraftingInCrafter)
 			.build(),
 
-	mechanicalCrafting =
-			register("mechanical_crafting", MechanicalCraftingCategory::new).recipes(AllRecipeTypes.MECHANICAL_CRAFTING)
-				.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
-				.build();
+	mechanicalCrafting = register("mechanical_crafting", MechanicalCraftingCategory::new)
+			.recipes(AllRecipeTypes.MECHANICAL_CRAFTING)
+			.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
+			.build();
 
-	private <T extends Recipe<?>> CategoryBuilder register(String name,
-																					   Supplier<CreateRecipeCategory<T>> supplier) {
+	private <T extends Recipe<?>> CategoryBuilder<T> register(String name, Supplier<CreateRecipeCategory<T>> supplier) {
 		return new CategoryBuilder<>(name, supplier);
 	}
 
@@ -228,14 +238,12 @@ public class CreateREI implements REIClientPlugin {
 	@Override
 	public void registerDisplays(DisplayRegistry registry) {
 		allCategories.forEach(c -> c.recipes.forEach(s -> {
-			Supplier<List<Recipe<?>>> recipes = (Supplier<List<Recipe<?>>>) s;
-			for (Recipe recipe : recipes.get()) {
+			for (Recipe<?> recipe : s.get()) {
 				registry.add(new CreateDisplay<>(recipe, c.getCategoryIdentifier().getPath()), recipe);
 			}
 		}));
 
-		List<CraftingRecipe> recipes = ToolboxColoringRecipeMaker.createRecipes()
-				.collect(Collectors.toList());
+		List<CraftingRecipe> recipes = ToolboxColoringRecipeMaker.createRecipes().toList();
 		for (Object recipe : recipes) {
 			Collection<Display> displays = registry.tryFillDisplay(recipe);
 			for (Display display : displays) {
@@ -246,20 +254,19 @@ public class CreateREI implements REIClientPlugin {
 		}
 	}
 
-//	@SuppressWarnings({ "unchecked", "rawtypes" })
-//	@Override
-//	public void registerGuiHandlers(IGuiHandlerRegistration registration) {
-//		registration.addGenericGuiContainerHandler(AbstractSimiContainerScreen.class, new SlotMover());
-//
-//		registration.addGhostIngredientHandler(AbstractFilterScreen.class, new GhostIngredientHandler());
-//		registration.addGhostIngredientHandler(BlueprintScreen.class, new GhostIngredientHandler());
-//		registration.addGhostIngredientHandler(LinkedControllerScreen.class, new GhostIngredientHandler());
-//	}
-
-
 	@Override
 	public void registerExclusionZones(ExclusionZones zones) {
 		zones.register(AbstractSimiContainerScreen.class, new SlotMover());
+	}
+
+	@Override
+	public void registerScreens(ScreenRegistry registry) {
+		registry.registerDraggableStackVisitor(new GhostIngredientHandler<>());
+	}
+
+	@Override
+	public void registerTransferHandlers(TransferHandlerRegistry registry) {
+		registry.register(new BlueprintTransferHandler());
 	}
 
 	private class CategoryBuilder<T extends Recipe<?>> {
@@ -348,11 +355,12 @@ public class CreateREI implements REIClientPlugin {
 		}
 
 		public CreateRecipeCategory<T> build() {
-			if (pred.test(AllConfigs.SERVER.recipes))
 				category.recipes.add(() -> {
 					List<Recipe<?>> recipes = new ArrayList<>();
-					for (Consumer<List<Recipe<?>>> consumer : recipeListConsumers)
-						consumer.accept(recipes);
+					if (pred.test(AllConfigs.SERVER.recipes)) {
+						for (Consumer<List<Recipe<?>>> consumer : recipeListConsumers)
+							consumer.accept(recipes);
+					}
 					return recipes;
 				});
 			allCategories.add(category);
